<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_set"
            android:textColor="@color/textWhite"
            android:gravity="center"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_serverip"
            android:textColor="@color/textBlack"
            android:gravity="center_vertical|left"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/set_sendip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text_ip"
            android:text="192.168.20.227"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_clientport"
            android:textColor="@color/textBlack"
            android:gravity="center_vertical|left"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/set_sendport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text_port"
            android:text="@string/text_port"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_serverport"
            android:textColor="@color/textBlack"
            android:gravity="center_vertical|left"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/set_acceptport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text_port"
            android:text="@string/text_port"/>

        <Button
            android:id="@+id/button_ack"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/text_ack"
            android:textSize="21dp" />

        <TextView
            android:id="@+id/set_ip"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical|left"
            android:textSize="21dp" />


    </LinearLayout>

</LinearLayout>