<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="@color/colorPrimary" >

    <TextView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:textColor="@color/textWhite"
        android:gravity="center"
        android:textSize="20dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/button_set"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/text_set"
        android:textColor="@color/textWhite"
        android:textSize="16dp"
        android:background="@null"/>

    <Button
        android:id="@+id/button_his"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:text="@string/text_his"
        android:textColor="@color/textWhite"
        android:textSize="16dp"
        android:background="@null" />

</LinearLayout>